--- a/module_set/src/main/res/values/dimens.xml
+++ b/module_set/src/main/res/values/dimens.xml
@@ -11,4 +11,28 @@
     <dimen name="set_rl_statustheme_margin_left">26dp</dimen>
     <dimen name="set_rl_statustheme_margin_top">20dp</dimen>
     <dimen name="set_tv_status_theme">18sp</dimen>
+    <dimen name="set_tv_status_theme_tip_margin_right">2dp</dimen>
+    <dimen name="set_cb_status_theme_margin_right">20dp</dimen>
+    <dimen name="set_rl_theme_margin_left">26dp</dimen>
+    <dimen name="set_rl_theme_margin_top">20dp</dimen>
+    <dimen name="set_tv_theme_color_text_size">18sp</dimen>
+    <dimen name="set_show_themecolor_margin_right">20dp</dimen>
+    <dimen name="set_rl_eyecare_margin_left">26dp</dimen>
+    <dimen name="set_rl_eyecare_margin_top">20dp</dimen>
+    <dimen name="set_tv_eyecare_text_size">18sp</dimen>
+    <dimen name="set_cb_eyecare_margin_right">20dp</dimen>
+    <dimen name="set_rl_night_time_margin_left">26dp</dimen>
+    <dimen name="set_rl_night_time_margin_top">20dp</dimen>
+    <dimen name="set_auto_change_night_time_text_size">18sp</dimen>
+    <dimen name="set_cb_change_night_margin_right">20dp</dimen>
+    <dimen name="set_tv_common_margin_left">26dp</dimen>
+    <dimen name="set_tv_common_margin_top">30dp</dimen>
+    <dimen name="set_tv_common_text_size">16sp</dimen>
+    <dimen name="set_rl_multingual_margin_left">26dp</dimen>
+    <dimen name="set_rl_multingual_margin_top">2dp</dimen>
+    <dimen name="set_tv_multilingual_text_size">18sp</dimen>
+    <dimen name="set_tv_multilingual_mode_margin_right">20dp</dimen>
+    <dimen name="set_rl_change_text_size_margin_left">26dp</dimen>
+    <dimen name="set_rl_change_text_size_margin_top">26dp</dimen>
+    <dimen name="set_tv_changetextsize_text_size">18sp</dimen>
 </resources>
