--- a/module_set/src/main/res/values-night/colors.xml
+++ b/module_set/src/main/res/values-night/colors.xml
@@ -3,4 +3,9 @@
     <color name="set_tv_darkmode_color">#D3D3D3</color>
     <color name="set_darkmore_status_color">#666666</color>
     <color name="set_tv_status_theme_color">#D3D3D3</color>
+    <color name="set_tv_theme_color">#D3D3D3</color>
+    <color name="set_tv_eyecare_color">#D3D3D3</color>
+    <color name="set_auto_change_night_time_color">#D3D3D3</color>
+    <color name="set_tv_multilingual_color">#D3D3D3</color>
+    <color name="set_tv_changetextsize_color">#D3D3D3</color>
 </resources>
