--- a/module_set/src/main/res/values/colors.xml
+++ b/module_set/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
      <color name="set_auto_change_night_time_color">#333333</color>
      <color name="set_tv_multilingual_color">#333333</color>
      <color name="set_tv_changetextsize_color">#333333</color>
+     <color name="set_tv_gesture_password_color">#333333</color>
+     <color name="set_tv_clearcache_color">#333333</color>
 </resources>
