--- a/module_set/src/main/res/values/dimens.xml
+++ b/module_set/src/main/res/values/dimens.xml
@@ -35,14 +35,30 @@
     <dimen name="set_rl_change_text_size_margin_left">26dp</dimen>
     <dimen name="set_rl_change_text_size_margin_top">26dp</dimen>
     <dimen name="set_tv_changetextsize_text_size">18sp</dimen>
+    <dimen name="set_tv_changetextsize_arrow_margin_right">20dp</dimen>
     <dimen name="set_rl_gesture_password_margin_left">26dp</dimen>
     <dimen name="set_rl_gesture_password_margin_top">20dp</dimen>
     <dimen name="set_tv_gesture_password_text_size">18sp</dimen>
-    <dimen name="set_tv_gesture_password_arrow_right_margin_right">20dp</dimen>
+    <dimen name="set_tv_gesture_password_arrow_margin_right">20dp</dimen>
     <dimen name="set_rl_clearcache_margin_left">26dp</dimen>
     <dimen name="set_rl_clearcache_margin_top">20dp</dimen>
     <dimen name="set_tv_clearcache_text_size">18sp</dimen>
+    <dimen name="set_tv_cachememory_margin_right">20dp</dimen>
     <dimen name="set_tv_other_text_size">16sp</dimen>
-    <dimen name="set_tv_repository_margin_left">26dp</dimen>
-    <dimen name="set_tv_repository_margin_top">2dp</dimen>
+    <dimen name="set_rl_project_repository_margin_left">26dp</dimen>
+    <dimen name="set_rl_project_repository_margin_top">2dp</dimen>
+    <dimen name="set_tv_project_repository_text_size">18sp</dimen>
+    <dimen name="set_tv_project_repository_arrow_margin_right">20dp</dimen>
+    <dimen name="set_rl_official_website_margin_left">26dp</dimen>
+    <dimen name="set_rl_official_website_margin_top">20dp</dimen>
+    <dimen name="set_tv_official_website_text_size">18sp</dimen>
+    <dimen name="set_tv_official_website_arrow_margin_right">20dp</dimen>
+    <dimen name="set_rl_about_margin_left">26dp</dimen>
+    <dimen name="set_rl_about_margin_top">20dp</dimen>
+    <dimen name="set_tv_about_text_size">18sp</dimen>
+    <dimen name="set_tv_about_wanandroid_arrow_margin_right">20dp</dimen>
+    <dimen name="set_rl_logout_margin_left">26dp</dimen>
+    <dimen name="set_rl_logout_margin_top">20dp</dimen>
+    <dimen name="set_tv_logout_text_size">18sp</dimen>
+    <dimen name="set_tv_logout_arrow_margin_right">20dp</dimen>
 </resources>
