--- a/module_set/src/main/res/values-night/colors.xml
+++ b/module_set/src/main/res/values-night/colors.xml
@@ -10,4 +10,8 @@
     <color name="set_tv_changetextsize_color">#D3D3D3</color>
     <color name="set_tv_gesture_password_color">#D3D3D3</color>
     <color name="set_tv_clearcache_color">#D3D3D3</color>
+    <color name="set_tv_project_repository_color">#D3D3D3</color>
+    <color name="set_tv_official_website_color">#D3D3D3</color>
+    <color name="set_tv_about_wanandroid_color">#D3D3D3</color>
+    <color name="set_tv_logout_color">#D3D3D3</color>
 </resources>
