完善设置页面

--- a/module_mine/src/main/res/layouts/fragments/layout/mine_fragment.xml
+++ b/module_mine/src/main/res/layouts/fragments/layout/mine_fragment.xml
@@ -226,7 +226,7 @@
 
                 <!--系统设置-->
                 <RelativeLayout
-                    android:id="@+id/rl_mine_setup"
+                    android:id="@+id/mine_rl_setup"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/mine_rl_system_set_margin_top"
