--- a/module_set/src/main/res/values/dimens.xml
+++ b/module_set/src/main/res/values/dimens.xml
@@ -61,4 +61,5 @@
     <dimen name="set_rl_logout_margin_top">20dp</dimen>
     <dimen name="set_tv_logout_text_size">18sp</dimen>
     <dimen name="set_tv_logout_arrow_margin_right">20dp</dimen>
+    <dimen name="set_tv_gesture_password_arrow_right_margin_right">20dp</dimen>
 </resources>
