--- a/library_widget/src/main/res/values/colors.xml
+++ b/library_widget/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="widget_gesturelock_dot_pressed_color">#FFBBBBBB</color>
     <color name="widget_gesturelock_line_color">#55CCCCCC</color>
     <color name="widget_progress_color">#4E4E4E</color>
+    <color name="widget_light_transparent">#16000000</color>
 </resources>
