--- a/module_mine/src/main/res/values/dimens.xml
+++ b/module_mine/src/main/res/values/dimens.xml
@@ -77,4 +77,30 @@
     <dimen name="mine_mine_tv_login_text_size">16sp</dimen>
     <dimen name="mine_tv_register_margin_right">22dp</dimen>
     <dimen name="mine_tv_register_text_size">14sp</dimen>
+    <dimen name="mine_tv_register_app_name_margin_left">20dp</dimen>
+    <dimen name="mine_tv_register_app_name_margin_top">40dp</dimen>
+    <dimen name="mine_tv_register_appname_text_size">26sp</dimen>
+    <dimen name="mine_register_cardview_margin_left">20dp</dimen>
+    <dimen name="mine_register_cardview_margin_top">20dp</dimen>
+    <dimen name="mine_register_cardview_margin_right">20dp</dimen>
+    <dimen name="mine_register_cardview_corner_radius">6dp</dimen>
+    <dimen name="mine_register_ll_margin_left">20dp</dimen>
+    <dimen name="mine_register_ll_margin_top">30dp</dimen>
+    <dimen name="mine_register_ll_margin_right">20dp</dimen>
+    <dimen name="mine_register_ll_margin_bottom">50dp</dimen>
+    <dimen name="mine_tv_registeraccountname_text_size">20sp</dimen>
+    <dimen name="mine_register_username_margin_top">16dp</dimen>
+    <dimen name="mine_register_username_text_size">16sp</dimen>
+    <dimen name="mine_register_account_line_margin_top">12dp</dimen>
+    <dimen name="mine_tv_registerpassword_margin_top">20dp</dimen>
+    <dimen name="mine_tv_registerpassword_text_size">20sp</dimen>
+    <dimen name="mine_cl_register_password_margin_top">16dp</dimen>
+    <dimen name="mine_cl_register_password_text_size">16sp</dimen>
+    <dimen name="mine_password_account_line">12dp</dimen>
+    <dimen name="mine_tv_confirmpassword_margin_top">20dp</dimen>
+    <dimen name="mine_tv_confirmpassword_text_size">20sp</dimen>
+    <dimen name="mine_register_confirmpassword_margin_top">16dp</dimen>
+    <dimen name="mine_cl_register_confirmpassword_text_size">16sp</dimen>
+    <dimen name="mine_confim_password_bottom_line">12dp</dimen>
+    <dimen name="mine_register_confim_text_size">16sp</dimen>
 </resources>
